@@ -8,6 +8,7 @@ DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6-3.8.patch1 2942 SHA256 aad
 DIST 0002-block-introduce-the-BFQ-v6-I-O-sched-for-3.8.patch1 177121 SHA256 162561c41e9c34afa27de02e748e99384efd8aefaa9d12e32f24d84905c161c5 SHA512 969243390aac491ff04ed684d492e5d3f1215fa9fd63d99a4a5639a63d868934c16cd091713aed1581fc90ed8863f348d71597af7396247c81ed5e4ff28c245a WHIRLPOOL 1777a58fcab8efc2100064199f5f7e0c81ce05e40dcb65ccc45454a097c74f646e2f355ac3262f26541ec020b8a6df2d430927b0424a094f36281f784ce734e0
 DIST README-3.8.4.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.5.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
+DIST README-3.8.6.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
@@ -17,17 +18,20 @@ DIST genpatches-3.8-7.base.tar.xz 141664 SHA256 5c6e0eaa2f01311c926780b59553deb3
 DIST genpatches-3.8-7.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.8-8.base.tar.xz 169848 SHA256 6155e2165bada1247947095db09e37c583be690309125c574e3e3e1013988e78 SHA512 58550ae264e66ccfe50c285f12c858df50b25726e6e45942be10a06cc94443259b14109f6f54bffb6947be05db27696687375593d6765499aacd6c2e290dd95f WHIRLPOOL 2977c1b04ba91dad038bd6cf4b974f4e671d23c2180b9091fe0e12a1f8b15e55493c123fc42bb8f0ba591f47cb33a23746ca77889ced2fc7e94ea707564b0dd3
 DIST genpatches-3.8-8.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
+DIST genpatches-3.8-9.base.tar.xz 208468 SHA256 52295de742ba0371afd041e09ba280e2bcb2ed7b43bf5656de70a1509201e45d SHA512 a7bbb8e2e5140cf3012fd864d1ddea3c511ee6f226d8bea9be411c28be46873e3847d97719db78118eaf352e80cef8370d0b6d122426ec4a879abd862936ac1e WHIRLPOOL dd58bfc1dfbe7a1adecc18ac3f80997c1b37582870c7ad2f4f3f46af46542efce4e2f773010dd63e1b05dcd4be814a73283bcec64341aaa88f7a254a0f9a314b
+DIST genpatches-3.8-9.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.8.tar.xz 70989468 SHA256 e070d1bdfbded5676a4f374721c63565f1c969466c5a3e214004a136b583184b SHA512 10a7983391af907d8aec72bdb096d1cabd4911985715e9ea13d35ff09095c035db15d4ab08b92eda7c10026cc27348cb9728c212335f7fcdcda7c610856ec30f WHIRLPOOL 0c633854ad9c06df1b1d832aea9bbef76144ba88c8fccf6a3f8729101dc36838bcda6ccd444451cab19177608e7f7866f4f79cff1a8ef2bd0c893933d7f1f44c
 EBUILD lh-sources-3.8.4.ebuild 3454 SHA256 34f136ed2044bf86403a11b825210c464b686a4de6dcc0db733b1b24b26219c5 SHA512 336a50b0de967da080c3d02d4534a70dff16e9675a031f3d9a00afe84d84ea33de94a64d5177a4065d1eb6e78b8515aea062e6d3da82b6a7e48563dc31bd0e7e WHIRLPOOL 74b1aa91c7375813b82946d9f3fc218f6d2e348e5975e3e8180092ca1b45674488354db09900dfba92ff4754dd34dd6bd7f1b4d8a5d2926c5bb632efcdce34e7
 EBUILD lh-sources-3.8.5-r1.ebuild 3435 SHA256 00e4b765b18b1909e0cf767b72622ff1016f6f8497317297794d2d86d90f005f SHA512 c6681aff0110c0299a0c25af300e97edec6ec469e73fa0731a778607d641113782ebbbfaf6e08d01adc2fbdcf63239fa0a6039f64f2f5aa4cd6805d3ae688f7e WHIRLPOOL 85f5bc97b495815ea1950c7bf9b49a8a3e7cd21d46c472e713e80eba2c0d7100d519746a341c74ee66b5c59f6d406f028e7ee767b6a1423ed5ed4f780db93481
 EBUILD lh-sources-3.8.5.ebuild 3454 SHA256 c94b11f65c3ff4aa6ad554d8a21fe055151945e1952ae18f5244a43d80bb3c93 SHA512 ec2c879e53536838af2ddbc4fe1a94f6e1f734e6291f7bf37e80324e8fac12fd16d3d1c2e484fe3b637fe41167556434e75113b0da3a38ae9fc94857ebb74850 WHIRLPOOL 5ce7e30b157ac460cf9e6a9e848677f6a9d4845c2cd5a02cd4693b7b9e4cfc3c0b46c48f30007f1ea11b4c96f88a6661422ba62626afaad3ef330760a79f2451
-MISC ChangeLog 6521 SHA256 f075376389854e27c25115e5e67abd66e073cbbddb04100b7b8be818a29867bd SHA512 b0a97422f4db97301d0ca3d9cb5c0df9123e1fc28f1797b02eba3b719638194527c152e2b618ad7bfbc0c67101ee7a36a97f98cb2fbd52cfdd741f901676b03d WHIRLPOOL d97ae6f30c28fa4364b41cc56ba0ed07c6aa611c32fea0379b6ea779cd38853fe778ae77427d70a66fbacb84eb223e7713b3f79f8b5d2bdd350373be320a0841
+EBUILD lh-sources-3.8.6.ebuild 3435 SHA256 78e519c4fcf9cc0c5a828515e17cd6ff6967d4be6356e3459a8fc02ad88436b0 SHA512 2e409be7b8a7f747bdd181216b7abbcacdb66d5f37d8e8ee6ec4394bdf30007bf7c021262176d2021302c64e9e3026273e2119ab3fc6387d0c281ef57408b3b4 WHIRLPOOL 6106dd4521a1d5b41527cb573ac3ff77390c5bfc246278db9a1993129660fc9a9aca0d33d90a182e16ba3795490dbef179733a3771bf0c46a28c6ae7dcaae5dd
+MISC ChangeLog 6664 SHA256 85bb7eac19385de5a806cc91699206e822f82a2ce592696210b72a6af829bc5b SHA512 aba3bd617431b7ed114e47de5f0c7d224f5d9943c742ef2262f14701a6412578abb35c075f56028c6206a9afa0a276d8226909d905d027291b04825a9b9784e2 WHIRLPOOL bc0dd2dddcebb60652b550b6afb445fc847e4264816fafd44d507dec0d9f4671cb9d574715346aeffe4023892f2575a332fb05bee1c75f9b02732cee818d1a89
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlFakacACgkQgAnW8HDreRbXYQCeL5t6to+KZAXYPKiCRRv2WPkI
-VxYAoIZ2EZxhYVS5YnA6m2H84bpBQG/j
-=H1a9
+iEYEAREKAAYFAlFf43IACgkQgAnW8HDreRZUawCeIEamR4g0arePI7XBNA+AmmGG
+wfkAoIhlVzx5Pe6p/mMU8H1B+mObFdj+
+=oBHM
 -----END PGP SIGNATURE-----
