@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.8.6 (06 Apr 2013)
+
+  06 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.6.ebuild:
+  Bump to latest genpatches release
+
 *lh-sources-3.8.5-r1 (02 Apr 2013)
 
   02 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.5-r1.ebuild:
